# UDTool

./: Cargo.toml  Cross.toml  README.md  create-macos-pkg.sh
.github/workflows/: macos-pkg-release.yml  release.yml  rust.yml
src/: main.rs
wix/: main.wxs
