[package]
name = "UDTool"
version = "1.0.0"
edition = "2024"
authors = ["Ari Cummings <ari@aricummings.com>"]
license = "MIT"
description = "Universal Data Tool - Manage files on remote server with API key authentication"

[dependencies]
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "rustls-tls"], default-features = false }
serde_json = "1.0"
